--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 /*--------------- debug ---------------*/
 main {
-  height: 100vh;
+  min-height: 200vh;
   background-color: royalblue;
 }
 
@@ -25,16 +25,25 @@ body {
 }
 h1 {
   font-size: 46px;
+  padding: 20px 0;
 }
 h2 {
   font-size: 32px;
+  margin-bottom: 20px;
 }
 h3 {
   font-size: 22px;
+  margin-bottom: 20px;
+}
+p {
+  padding: 10px 0;
 }
 a {
   text-decoration: none;
   color: inherit;
+}
+img {
+  cursor: pointer;
 }
 
 .container {
@@ -68,15 +77,31 @@ a {
   list-style: none;
 }
 
+.ib {
+  display: inline-block;
+}
+
+.shadow {
+  box-shadow: 0px 0px 5px #d4dfe7;
+}
+
 /* text */
 .text-r {
   text-align: right;
+}
+.text-l {
+  text-align: left;
 }
 .text-c {
   text-align: center;
 }
 .text-sm {
   font-size: 12px;
+}
+.text-upper {
+  font-weight: 700;
+  text-transform: uppercase;
+  /* padding: 20px 0; */
 }
 
 /* color */
@@ -145,8 +170,8 @@ a {
   line-height: 10vh;
 }
 
-.list-inline li {
-  display: inline-block;
+nav .list-inline li {
+  /* display: inline-block; */
   vertical-align: middle;
   margin: 0 10px;
 }
@@ -168,7 +193,6 @@ a {
 #static_nav .logo img {
   vertical-align: middle;
   margin-left: 10px;
-  cursor: pointer;
 }
 
 /* jumbotron */
@@ -180,12 +204,9 @@ a {
   background-repeat: no-repeat;
   background-position: 100% 2%;
 }
-.jumbotron-text > * {
+/* .jumbotron-text > p {
   padding: 10px 0;
-}
-.jumbotron-text .btn {
-  display: inline-block;
-}
+} */
 
 /* header footer */
 header > footer.bgc-lightgre {
@@ -195,4 +216,55 @@ header > footer.bgc-lightgre {
 }
 
 /*---------------- main ----------------*/
+main > section {
+  padding: 20px 0;
+}
+
+.main-title,
+.main-single,
+.main-triple {
+  margin-top: 30px;
+  padding: 40px 0;
+}
+.main-title img {
+  max-height: 200px;
+}
+.main-single img,
+.main-triple img {
+  max-height: 100px;
+  margin-bottom: 10px;
+}
+
+.ol {
+  width: 70%;
+  height: 8px;
+  border-bottom: 1px solid #33475b;
+}
+
+.main-single li {
+  margin-right: 10px;
+}
+.main-single i,
+.main-triple i {
+  margin-right: 5px;
+}
+
+.main-triple-text {
+  padding: 0 25px;
+}
+.main-triple-text hr {
+  margin-top: 30px;
+  margin-bottom: 15px;
+  height: 1px;
+  border-width: 0;
+  background-color: #33475b;
+}
+.main-triple-text ul {
+  margin-bottom: 40px;
+}
+
+.main-triple:nth-child(2) {
+  margin-left: calc(10% / 2);
+  margin-right: calc(10% / 2);
+}
 /*--------------- footer ---------------*/
