--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,10 @@
 main {
   background-color: royalblue;
 }
+.customers-logo > .logo {
+  background-color: red;
+  border: 1px solid black;
+}
 
 /*--------------- /debug --------------*/
 
@@ -105,6 +109,9 @@ img {
 .text-sm {
   font-size: 12px;
 }
+.text-lg {
+  font-size: 48px;
+}
 .text-upper {
   font-weight: 700;
   text-transform: uppercase;
@@ -143,6 +150,9 @@ img {
 }
 .bgc-lightgre {
   background-color: #afebe4;
+}
+.bgc-gradient {
+  background-image: linear-gradient(45deg, #00a4bd, #00bda5);
 }
 
 /* buttons */
@@ -227,11 +237,8 @@ header > footer.bgc-lightgre {
 }
 
 /*---------------- main ----------------*/
-main {
-  padding: 20px 0;
-}
 main > section {
-  padding: 20px 0;
+  padding: 40px 0;
 }
 
 /* .main-title, */
@@ -281,6 +288,19 @@ main > section {
   margin-left: calc(10% / 2);
   margin-right: calc(10% / 2);
 }
+
+.customers-logo {
+  height: 40px;
+  line-height: 40px;
+}
+.customers-logo:first-child {
+  margin: 15px 0 30px;
+}
+.customers-logo > .logo > img {
+  width: 70%;
+  vertical-align: middle;
+}
+
 /*--------------- footer ---------------*/
 body > footer {
   min-height: 70vh;
@@ -307,8 +327,8 @@ footer .logo {
   margin-top: 50px;
 }
 footer p {
-    padding: 0;
+  padding: 0;
 }
-footer section.ft-logo li:first-child{
-margin-right: 15px;
+footer section.ft-logo li:first-child {
+  margin-right: 15px;
 }
