--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,4 @@
 /*--------------- debug ---------------*/
-main {
-  background-color: royalblue;
-}
-/* .customers-logo > .logo {
-  background-color: red;
-  border: 1px solid black;
-} */
-
 /*--------------- /debug --------------*/
 
 /*--------------- common ---------------*/
@@ -16,15 +8,14 @@ main {
   padding: 0;
 }
 
-/* html {
+html {
   scroll-behavior: smooth;
-} */
+}
 
 body {
   font-family: "Nunito", sans-serif;
   color: #33475b;
   font-size: 16px;
-  /* text-align: left; */
 }
 h1 {
   font-size: 46px;
@@ -95,6 +86,9 @@ img {
 .shadow {
   box-shadow: 0px 0px 5px #d4dfe7;
 }
+div.shadow:hover {
+  box-shadow: 0px 0px 5px #33475b;
+}
 
 /* text */
 .text-r {
@@ -159,7 +153,6 @@ img {
   border-radius: 5px;
   padding: 5px 5px;
   border: 1px solid #ff7a59;
-  /* font-size: 12px; */
   overflow: hidden;
 }
 .btn-lg {
